Remove bootstrap dark theme from navbar text to fix contrast issues. Show text as black and style to match font scheme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,9 @@ p {
 
 #navbar {
     background-color: var(--highlight-color);
+    font-family: var(--secondary-font);
+    font-size: larger;
+    font-weight: bolder;
 }
 
 #navbar .logo {
